[gd_scene load_steps=4 format=3 uid="uid://bfwik7j6xmwrq"]

[ext_resource type="PackedScene" uid="uid://ki08mjslq50j" path="res://scenes/ability_node/ability_node.tscn" id="1_adbc8"]
[ext_resource type="Script" uid="uid://qr21rx0f0bya" path="res://scenes/upgrade_screen/upgrade_screen.gd" id="1_scxlh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scxlh"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scxlh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LevelLabel" type="Label" parent="MarginContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level : 0"

[node name="HPLabel" type="Label" parent="MarginContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HP : 0"

[node name="DPSLabel" type="Label" parent="MarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DPS: 100"

[node name="DropRateLabel" type="Label" parent="MarginContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Drop Rate: 1.0"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 60
alignment = 1

[node name="Column01" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60
alignment = 1

[node name="DamageIncrease" parent="MarginContainer/HBoxContainer/Column01" instance=ExtResource("1_adbc8")]
z_index = 1
layout_mode = 2
ability_id = "all_towers_damage_increase"

[node name="RateOfFireIncrease" parent="MarginContainer/HBoxContainer/Column01" instance=ExtResource("1_adbc8")]
z_index = 1
layout_mode = 2
ability_id = "rate_of_fire"

[node name="Column02" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrimeTower" parent="MarginContainer/HBoxContainer/Column02" instance=ExtResource("1_adbc8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
ability_id = "prime_tower"

[node name="Column3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DropRate" parent="MarginContainer/HBoxContainer/Column3" instance=ExtResource("1_adbc8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
ability_id = "drop_rate"

[node name="TakeDamageButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_scxlh")
text = "Take Damage"

[connection signal="pressed" from="MarginContainer/TakeDamageButton" to="." method="_on_take_damage_button_pressed"]
